# Geometrize2GD

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
src/: main.cpp
